<resources>
    <string name="app_name">Farmist</string>
    <string name="english" translatable="false">English</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="telegu" translatable="false">Telegu</string>
    <string name="kannada" translatable="false">Kannada</string>
    <string name="login">Login</string>
    <string name="enter_your_mobile_number_and_we_will_send_the_verification_code">Enter your mobile number and we will send the verification code</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sharedtext">shareImg</string>
    <string name="news_amp_announcements"><![CDATA[News & Announcements]]></string>
    <string name="see_all">See all</string>
    <string name="next_3_days_forecast">Next 3 days forecast</string>
    <string name="crop_prices">Crop Prices</string>
    <string name="rs" translatable="false">Rs.</string>
    <string name="expenses_amp_income_tracker"><![CDATA[Expenses & Income Tracker]]></string>
    <string name="crop">Crop</string>
    <string name="my_farms">My Farms</string>
    <string name="upcoming_actions">Upcoming Actions</string>
    <string name="farm_states">Farm States</string>
    <string name="loans_amp_subsidies_info"><![CDATA[Loans & Subsidies Info]]></string>
    <string name="home">Home</string>
    <string name="alerts">Alerts</string>
    <string name="prices">Prices</string>
    <string name="account">Account</string>
    <string name="news">News</string>
    <string name="government_schemes">Government Schemes</string>

    <string name="my_crops_market_price">My Crops Market Price</string>
    <string name="other_crop_market_prices">Other Crop Market Prices</string>
    <string name="personal_information">Personal Information</string>
    <string name="choose_language">Choose Language</string>
    <string name="log_out">Log out</string>
    <!--    <string name="name">Name</string>-->
    <!--    <string name="pincode">Pincode</string>-->
    <!--    <string name="village">Village</string>-->
    <!--    <string name="tehsil">Tehsil</string>-->
    <!--    <string name="district">District</string>-->
    <string name="number_of_accers">Number of accers</string>
    <string name="save_profile">Save Profile</string>
    <string name="add_crop_details">Add crop details</string>
    <string name="add_photo">Add photo</string>
    <string name="choose_farm">Choose Farm</string>
    <string name="add_new_farm">Add new farm</string>
    <string name="sowed_area">Sowed Area</string>
    <string name="acers">Acers</string>
    <!--    <string name="guntas">Guntas</string>-->
    <!--    <string name="bhigas">Bhigas</string>-->
    <string name="sowed_date">Sowed Date</string>
    <string name="save">Save</string>
    <!--    <string name="phone_number">Phone number</string>-->
    <!--    <string name="enter_verification_code">Enter Verification Code</string>-->
    <string name="enter_the_verification_code_sent_to_your_mobile_number">Enter the verification code sent to your mobile number</string>
    <string name="log_in">Log in</string>
    <!--    <string name="sign_up">Sign up</string>-->
    <!--    <string name="create_an_account_with_farm_app_and_enjoy_all_the_features">Create an account with Farm app and enjoy all the features</string>-->
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="next">Next</string>
    <!--    <string name="sign_up">Sign up</string>-->
    <string name="create_an_account_with_farm_app_and_enjoy_all_the_features">Create an account with Farm app and enjoy all the features</string>
    <string name="pincode">Pincode</string>
    <string name="village">Village</string>
    <!--    <string name="tehsil">Tehsil</string>-->
    <string name="amer">amer</string>
    <string name="jaipur">Jaipur</string>
    <string name="district">District</string>
    <string name="number_of_acers">Number of acers</string>
    <string name="preferred_seed_brand">Preferred Seed Brand</string>
    <string name="preferred_chemical_company">Preferred Chemical Company</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign up</string>
    <string name="expenses">Expenses</string>
    <string name="date_sowed">Date Sowed</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="add_subsidy">Add Subsidy</string>
    <string name="add_income">Add Income</string>
    <!--    <string name="crop_prices">Crop Prices</string>-->
    <string name="are_you_sure_you_want_to_n_make_crop_harvest">are you sure you want to \n Make Crop Harvest?</string>
    <!--    <string name="no">no</string>-->
    <!--    <string name="yes">yes</string>-->
    <string name="are_you_sure_you_want_to_n_make_crop_archive">are you sure you want to \n Make Crop Archive?</string>
    <!--    <string name="yes">yes</string>-->
    <!--    <string name="no">no</string>-->
    <string name="are_you_sure_you_want_to_n_delete_this_farm">are you sure you want to \n delete this farm?</string>
    <!--    <string name="yes">yes</string>-->
    <!--    <string name="no">no</string>-->
    <string name="are_you_sure_you_want_to_n_delete_this_crop">are you sure you want to \n delete this crop?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="edit_farm_details">Edit farm details</string>
    <string name="area">Area</string>
    <string name="acres">Acres</string>
    <string name="guntas">Guntas</string>
    <string name="bhigas">Bhigas</string>
    <string name="tehsil">Tehsil</string>
    <string name="survey_number">Survey Number</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="archive">Archive</string>
    <!--    <string name="delete">Delete</string>-->
    <!--    <string name="expense">Expense</string>-->
    <!--    <string name="date_sowed">Date Sowed</string>-->
    <!--    <string name="profit_amp_loss"><![CDATA[Profit & Loss]]></string>-->
    <!--    <string name="profit">Profit</string>-->
    <!--    <string name="loss">Loss</string>-->
    <string name="expense_chart">Expense Chart</string>
    <string name="view_full_log">View full log</string>
    <string name="seeds">Seeds</string>
    <string name="fertilizer">Fertilizer</string>
    <string name="labour">Labour</string>
    <string name="tractor">Tractor</string>
    <!--    <string name="income">Income</string>-->
    <!--    <string name="subsidy">Subsidy</string>-->
    <!--    <string name="income">Income</string>-->
    <!--    <string name="subsidy">Subsidy</string>-->
    <string name="subsidy_name">Subsidy Name :</string>
    <string name="amount">Amount :</string>
    <string name="date">Date :</string>
    <string name="crops_sown">Crops Sown</string>
    <!--    <string name="survey_number">Survey Number</string>-->
    <string name="edit">Edit</string>
    <!--    <string name="delete">Delete</string>-->
    <string name="in_365_days">in 365 days</string>
    <string name="quant_sold">#Quant Sold</string>
    <!--    <string name="farming">#Farming</string>-->
    <!--    <string name="crops">#Crops</string>-->
    <!--    <string name="crops">#Crops</string>-->
    <string name="varieties">Varieties</string>
    <string name="harvested">#Harvested</string>
    <string name="till_date">Till Date</string>
    <string name="tracked">Tracked</string>
    <string name="sowed">Sowed</string>
    <string name="farm_stats">Farm Stats</string>
    <!--    <string name="personal_information">Personal Information</string>-->
    <!--    <string name="choose_language">Choose Language</string>-->
    <!--    <string name="log_out">Log out</string>-->
    <string name="fertilizer_info">Fertilizer Info</string>
    <!--    <string name="account">Account</string>-->
    <string name="archived_expenses_amp_income_tracker"><![CDATA[Archived Expenses & Income Tracker]]></string>
    <!--    <string name="harvest">Harvest</string>-->
    <!--    <string name="delete">Delete</string>-->
    <!--    <string name="sowed">Sowed</string>-->
    <!--    <string name="add_fertilizer">Add fertilizer</string>-->
    <!--    <string name="harvest">Harvest</string>-->
    <!--    <string name="expense_chart">Expense Chart</string>-->
    <!--    <string name="view_full_log">View full log</string>-->
    <!--    <string name="fertilizer_info">Fertilizer Info</string>-->
    <!--    <string name="view_more">View more</string>-->
    <!--    <string name="view_more">View more</string>-->
    <string name="pest_info">Pest Info</string>
    <string name="insecticides_info">Insecticides Info</string>
    <string name="view_more">View more</string>
    <!--    <string name="crop_prices">Crop Prices</string>-->
    <string name="news_details">News details</string>
    <string name="region">Region</string>
    <!--    <string name="name">Name</string>-->
    <!--    <string name="area">Area</string>-->
    <string name="income_harvest">Income(Harvest)</string>
    <string name="total">Total</string>
    <string name="full_expense_log">Full Expense Log</string>
    <string name="actions">Actions</string>
    <string name="vegetables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="select_category">Select Category</string>
    <string name="add_new_crop">Add new Crop</string>
    <!--    <string name="add_new_farm">Add new farm</string>-->
    <string name="sunflower">SunFlower</string>
    <string name="market_price">Market Price</string>
    <string name="current_market_price">Current Market Price</string>
    <string name="market_price_trend">Market Price Trend</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="crop_yield">Crop Yield</string>
    <string name="crop_sold">Crop Sold</string>
    <string name="profit_amp_loss"><![CDATA[Profit & Loss]]></string>
    <string name="loss">Loss</string>
    <!--    <string name="edit_farm_details">Edit farm details</string>-->
    <string name="change_photo">Change photo</string>
    <string name="update_farm">Update Farm</string>
    <string name="my_crops">My Crops</string>
    <string name="subsidy">Subsidy</string>
    <string name="income">Income</string>
    <string name="expense">expense</string>
    <string name="profit">Profit</string>
    <string name="farming">Farming</string>
    <string name="crops">Crops</string>
    <string name="harvest">Harvest</string>
    <string name="add_fertilizer">Add_fertilizer</string>
    <string name="Hashincome">#income</string>
    <string name="expenses_">#Expenses</string>
    <string name="area_">#Area</string>
    <string name="loading">Loading</string>
    <string name="more_details">More Details</string>
    <string name="days_left_for_harvest">days left for harvest</string>
    <string name="add_fertilizer_in">Add fertilizer in</string>
    <string name="expense_type">Expense Type</string>
    <string name="breakdown">Breakdown</string>
    <string name="add_farm_details">Add farm details</string>
    <string name="quantity">Quantity</string>
    <string name="kg">Kg</string>
    <string name="quintal">Quintal</string>
    <string name="ton">Ton</string>
    <string name="income_per_quantity">Income (per quantity)</string>
    <string name="announcement_detail">Announcement detail</string>
    <string name="continue_">Continue</string>


    <string-array name="Languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
    </string-array>
</resources>
