<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>



    </data>

<LinearLayout    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:elevation="@dimen/_5sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <TextView
android:id="@+id/backbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/back"
android:layout_marginEnd="@dimen/_5sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_farm_details"
                android:textStyle="normal"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:drawablePadding="@dimen/_5sdp" />


        </LinearLayout>




    </androidx.cardview.widget.CardView>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_Update_myFarm"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/cow"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/green_selected"
            android:text="@string/change_photo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_2sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_15sdp"/>

        <EditText
            android:id="@+id/et_name_Update_myFarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loan_form_background"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:hint="farm name"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/et_area_Update_myFarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loan_form_background"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:hint="200"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"/>


<RadioGroup
    android:id="@+id/rb_group_Update_myFarm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:orientation="horizontal"
    android:padding="@dimen/_5sdp">
            <RadioButton
                android:id="@+id/rb_Acres_Update_myFarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/acres"
                />
            <RadioButton
                android:id="@+id/rb_Guntas_Update_myFarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guntas"
                />

            <RadioButton
                android:id="@+id/rb_bigha_Update_myFarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bhigas"
                />
</RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tehsil"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/et_tehsil_Update_myFarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loan_form_background"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:hint="Karol"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/survey_number"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/et_Survey_Update_myFarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loan_form_background"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:hint="7788652"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/update_farm"
            android:textAllCaps="false"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@drawable/login_btn_background"
            android:id="@+id/Btn_Update_myFarm"
            />



    </LinearLayout>
</ScrollView>

</LinearLayout>
</layout>