<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:elevation="@dimen/_5sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_gravity="center"
            android:orientation="horizontal">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_farm_details"
                android:textStyle="normal"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/back"
                android:drawablePadding="@dimen/_5sdp" />

            
        </LinearLayout>




    </androidx.cardview.widget.CardView>
    
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp">
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/cow"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/green_selected"
            android:text="Change photo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_2sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_15sdp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loan_form_background"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:text="Trintha"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loan_form_background"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:text="Trintha"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:weightSum="3">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/acres"
                />
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guntas"
                />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bhigas"
                />







        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tehsil"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loan_form_background"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:text="Kasol"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/survey_number"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loan_form_background"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:text="7788652"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:text="Save"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@drawable/login_btn_background"/>
        
        
        
    </LinearLayout>

</LinearLayout>